# hyperschedule-api

./: .flake8  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE.md  Makefile  Pipfile  Procfile  README.md  debug.py  fetch.py  index.html  libcourse.py  liblingk.py  libportal.py  lingk_scraper.py  package.json  pylintrc  pyproject.toml  run_portal_scrape.py  server.js  server.py  setup.cfg  shell.nix  util.py
.circleci/: config.yml
html/: index.html
hyperschedule/: __init__.py  app.py  auth.py  database.py  database_worker.py  debug.py  libcourse.py  liblingk.py  libportal.py  run_portal_scrape.py  server.py  util.py  worker.py
hyperschedule/api/: __main__.py  app.py  database.py  diff.py  notify.py  util.py  validate.py
hyperschedule/scraper/: __init__.py  __main__.py  lingk.py  portal.py  shared.py
hyperschedule/scrapers/claremont/: __init__.py  __main__.py  lingk.py  portal.py  ratemyprof.py  shared.py
hyperschedule/scrapers/cu_boulder/: __init__.py  __main__.py
hyperschedule/tests/: test_diff.py
scripts/: docker-env.sh  docker-install-project.sh  docker-install-system-dev.sh  docker-install-system.sh  docker.sh
static/: index.html
