[tool.poetry]
name = "hyperschedule-api"
version = "0"
description = "API for Hyperschedule, the fast course scheduler"
authors = ["Radon Rosborough <radon.neon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5, <4"
boto3 = "^1.9"
flask = "^1.0"
flask-cors = "^3.0"
gunicorn = "^19.9"
requests = "^2.22"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
